# python-collections-itertools

./: README.md  pyproject.toml
batchpipe/: __init__.py  __main__.py  bench.py  cli.py  core.py  pipeline.py
tests/: test_batchpipe.py
